Archive2/40/65cbeb05d0c238/output
main.cpp: In function 'int main()':
main.cpp:5:14: error: 'std::istream' has no member named 'flush'
     std::cin.flush();
              ^
