Archive2/40/65cbeb05d0c238/main.cpp
#include <iostream>

int main()
{
    std::cin.flush();
}